# http-auth-poc

./: .env  .gitignore  Cargo.toml  README.md  biome.json  canister_ids.json  dfx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/: CONTRIBUTING.md
examples/todo-app/: README.md
examples/todo-app/src/backend/: Cargo.toml  backend.did  canbench.yml  canbench_results.yml
examples/todo-app/src/backend/src/: assets.rs  http.rs  lib.rs  root_key.rs  router.rs
examples/todo-app/src/backend/src/api/: api_types.rs  api_utils.rs  mod.rs
examples/todo-app/src/backend/src/bench/: golden.rs  mod.rs  validate_http_signature_headers.rs
examples/todo-app/src/backend/src/todo/: mod.rs  todo_routes.rs  todo_types.rs
examples/todo-app/src/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
examples/todo-app/src/frontend/src/: App.module.css  App.tsx  crypto.ts  index.tsx  internet-identity.ts  vite-env.d.ts
scripts/: local_deploy.sh
