[workspace]
resolver = "2"

members = ["examples/todo-app/src/backend", "packages/ic-http-auth", "packages/local-replica"]

[workspace.package]
version = "0.0.0"
authors = ["DFINITY Stiftung"]
edition = "2024"
repository = "https://github.com/dfinity/http-auth"
homepage = "https://github.com/dfinity/http-auth#readme"
license = "Apache-2.0"

[profile.release]
# lto = true
# opt-level = 'z'
# codegen-units = 1

opt-level = 0       # No optimizations (fastest compile time)
debug = false       # No debug symbols (faster linking)
lto = "off"         # Disable link-time optimizations (faster linking)
codegen-units = 256 # Compile many code units in parallel (faster builds)
incremental = true  # Enable incremental compilation (reuses previous builds)
panic = "unwind"    # Keep unwinding for better debugging (optional)


[workspace.dependencies]
ic-http-auth = { path = "./packages/ic-http-auth", version = "0.0.0" }

candid = "0.10"
ic-cdk = "0.18"
ic-http-certification = "3"
ic-asset-certification = "3"
ic-canister-sig-creation = "1"
ic-signature-verification = "0.2"

thiserror = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

once_cell = "1"
matchit = "=0.8.4"

sha2 = "0.10"
nom = "8"
include_dir = { version = "0.7", features = ["glob"] }

# debugging
hex = "0.4"

[workspace.dependencies.p256]
version = "0.13"
default-features = false
features = ["ecdsa", "jwk", "pkcs8"]

[workspace.lints.rust]
warnings = "deny"

[patch."https://github.com/dfinity/http-gateway"]
ic-http-gateway = { git = "https://github.com/ilbertt/http-gateway" }
