[package]
name = "todo_app_backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-http-certification.workspace = true
ic-asset-certification.workspace = true
ic-http-auth.workspace = true

include_dir.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
matchit.workspace = true

[lints]
workspace = true
